name:                blog
version:             0.7.1
-- synopsis
-- description:
homepage:            https://github.com/jeff-wise/haskell-starter-kit-blog#readme
license:             BSD3
license-file:        LICENSE
author:              Jeff Wise
maintainer:          jeff.scott.wise@gmail.com
copyright:           2017 Jeff Wise
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:       src
  exposed-modules:      Blog.CLI
                        Blog.Web.API
                        Blog.Types.Article
  other-modules:        Blog.Common
                        Blog.Config
                        Blog.Server
                        Blog.Types
                        Blog.DB.Article
                        Blog.DB.Image
                        Blog.HTML.Combinators
                        Blog.HTML.Page
                        Blog.Types.ArticleList
                        Blog.Types.Image
                        Blog.Types.User
                        Blog.Web.Config
                        Blog.Web.Handler
                        Blog.Web.Server
                        Blog.Web.Types
  build-depends:        base >= 4.7 && < 5
                      , aeson
                      , blaze-html
                      , blaze-markup
                      , bytestring
                      , errors
                      , filepath
                      , hashable
                      , http-media
                      , JuicyPixels
                      , markdown
                      , mtl
                      , opaleye
                      , optparse-applicative   
                      , postgresql-simple
                      , product-profunctors
                      , servant-blaze   
                      , servant-JuicyPixels   
                      , servant-multipart   
                      , servant-server
                      , servant-yaml
                      , stm
                      , text   
                      , time   
                      , transformers
                      , unordered-containers
                      , uuid
                      , wai   
                      , warp   
                      , yaml
  default-language:     Haskell2010
  default-extensions:   NoImplicitPrelude     
  ghc-options:          -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates -Wmissing-import-lists

executable blog-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , blog
  default-language:    Haskell2010

test-suite blog-text
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , blog
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/jeff-wise/haskell-starter-kit-blog
